# EvilPi

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  main_admin_conn.cpp  main_agent_conn.cpp  main_client_conn.cpp  main_server_proxy.cpp
cpp/include/app/: Admin.h
cpp/include/conn/: AdminConn.h  AgentConn.h  ClientConn.h  ConnData.h  ProxyServer.h
cpp/include/protocol/: Networking.h  Packet.h  PacketData.h  ProtocolDebug.h  SocketUtil.h
cpp/include/remote_accsess/: ReverseShell.h
cpp/include/tui/: AdminTUI.h
cpp/include/utils/: CommandParser.h
cpp/src/app/: Admin.cpp  Agent.cpp  ProxyServer.cpp
cpp/src/conn/: AdminConn.cpp  AgentConn.cpp  ClientConn.cpp  ProxyServer.cpp
cpp/src/protocol/: Packet.cpp  PacketData.cpp  ProtocolDebug.cpp  SocketUtil.cpp
cpp/src/remote_accsess/: ReverseShell.cpp
cpp/src/tui/: AdminTUI.cpp
cpp/src/utils/: CommandPraser.cpp
